v0.4.9
        - implement for authenticated sessions (state:`Authed`) the exchange of sessionID token to authorisation (granting access) through request scopes
        - adding session attribute user id to authenticated session
v0.4.8
        - works for authentication with AthroziationCode with PKCE workflow.
v0.4.7
        - chnage the state (to InAuth) in method SaveCodeChallengeAndMethod()
v0.4.6
        - auth code value added to the  SaveCodeChallengeAndMethod() method
v0.4.5
        - New method in SessionRepository interface - SaveCodeChallengeAndMethod()
v0.4.4
        - Fix in the implemented new method in v0.4.3
v0.4.3
        - New method in SessionRepository interface - UpdateCodeVerifier()
v0.4.2
        - update of ksuid package to v1.0.4
v0.4.1
        - some more logging lines added. Purpose is to monitor the existing sessions state.
v0.4.0  
        - implements session state update method for Firestore vendor
v0.3.0
        - implements Manager as middleware for the libarary
        
v0.2.0  implementing Firestore as session store provider

v0.1.7  change in SesCfg - visit cookie name added

v0.1.6  hotfix: Fixing Provider registering

v0.1.4  hotfix: Fix for GC panics without sessions

v0.1.3  hotfix: Initiate the supported providers map

v0.1.2  INMEM sesstion store provider implemented.
        Tests implemented with exception of the tests for cleaning the expired sessions.
        
v0.0.1  Initial compose of the module